--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "monolog/monolog": "1.0.*",
         "mmucklo/krumo": "^0.5.7",
         "filp/whoops": "^2.1",
-        "illuminate/database": "5.1.8"
+        "illuminate/database": "5.1.8",
+        "dompdf/dompdf": "^0.8.0"
     },
     "autoload": {
         "psr-4": {
